Promises no retorno dos status
