# keepalive-service/docs/swagger.yaml
@@ -10,20 +10,16 @@ servers:
 paths:
   /ping:
     post:
-      description: Registra um novo agendamento
+      description: Informa o servidor do ultimo timestamp em que esteve disponível.
       requestBody:
           required: true
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Schedule'
+                $ref: '#/components/schemas/Status'
       responses:
-        '201':
-          description: Devolve um objeto com o ID do agendamento
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Schedule'
+        '204':
+          description: Indica que o ping foi recebido com sucesso.
         default:
           description: Em caso de erro (status 4xx ou 5xx)
           content:
@@ -31,91 +27,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-    get:
-      description: Recupera a lista de agendamentos de acordo com o filtro informado
-      parameters:
-        - name: restaurantId
-          in: query
-          description: Filtra pelo id do restaurante
-          required: false
-          schema:
-            type: integer
-            format: int32
-        - name: limit
-          in: query
-          description: Numero maximo de resultados
-          required: false
-          schema:
-            type: integer
-            format: int32
-      responses:
-        200:
-          description: Lista de agendamentos conforme criterio
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Schedule'
-        403:
-          description: Caso o acesso aos dados do restaurante informado seja negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        default:
-          description: Em caso de erro (status 4xx ou 5xx)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
-  /schedule/{id}:
-    get:
-      description: Recupera um agendamento com base no ID
-      parameters:
-        - name: id
-          in: path
+  /status:
+    post:
+      description: Informa o status de disponibilidade do restaurante
+      requestBody:
           required: true
-          schema:
-            type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
       responses:
-        200:
-          description: O objeto associado ao ID informado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Schedule'
-        403:
-          description: Caso o acesso seja negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        default:
-          description: Em caso de erro (status 4xx ou 5xx)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
-    delete:
-      description: Remove um agendamento com base no ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        204:
-          description: O agendamento foi removido com sucesso
-        403:
-          description: Caso o acesso seja negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+        '204':
+          description: Indica que o ping foi recebido com sucesso.
         default:
           description: Em caso de erro (status 4xx ou 5xx)
           content:
@@ -125,33 +48,25 @@ paths:
 
 components:
   schemas:
-    Schedule:
+    Status:
       type: object
       properties:
-        id:
-          description: Identificador unico do agendamento
+        clientId:
+          description: Identificacao do cliente que está informando o estado da conexão
           type: string
-        start:
-          description: Timestamp com a data/hora inicial do agendamento
-          type: string
-          format: date-time
-        end:
-          description: Timestamp com a data/hora final do agendamento
+        timestamp:
+          description: Timestamp com a data/hora local do status
           type: string
           format: date-time
-        reason:
-          description: Motivo da indisponibilidade
-          type: string
-        type:
-          description: Tipo do agendamento -  "AV" para disponível, "UN" para indisponível. Default "UN"
+        status:
+          description: Status da disponibilidade do cliente
           type: string
           enum:
           - AV
           - UN
       required:
-        - start
-        - end
-
+        - clientId
+        - timestamp
 
     Error:
       required:
